LR1 main page overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,19 @@ html, body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
+div .row{
+    margin-left: 0;
+    margin-right: 0;
+}
 div.container-fluid{
     padding: 0;
     margin: 0;
     background-color: #0a53be;
+}
+div.gallery-illust-container{
+    line-height: 1;
+    text-align: center;
+    background-color: #06357a;
 }
 nav.navbar{
     padding: 0;
@@ -28,16 +37,25 @@ a.nav-link{
     font-size: large;
     color: white;
 }
-div.gallery-illust-container {
-    align-content: center;
+.main-content-gallery .gallery-illust-container img {
+    height: 200px;
 }
 li.navbar-item{
     margin: 10px;
 }
+ul.navbar-nav{
+    background-color: #0d6efd;
+}
 header .logo img {
     width: 150px;
+    margin-right: 10px;
 }
-img.gallery-illust{
+figure.gallery-illust{
+    text-align: center;
+    width: 10%;
+}
+img.gallery-illust-img{
+    max-width: 100%;
     height: 200px;
 }
 footer{
